--- a/android/res/layout-land/place_page_details.xml
+++ b/android/res/layout-land/place_page_details.xml
@@ -9,100 +9,108 @@
     android:id="@+id/pp__details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?ppBackground"
     android:overScrollMode="never">
 
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:background="?windowBackgroundForced"
       android:orientation="vertical">
-
-      <include
-        android:id="@+id/banner"
-        layout="@layout/place_page_banner"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/placepage_banner_height"
-        android:visibility="gone"
-        tools:visibility="visible"/>
-
-      <include
-        layout="@layout/divider_horizontal"/>
-
-      <include
-        layout="@layout/place_page_bookmark_details"
+      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_half"
-        tools:visibility="gone"/>
+        android:orientation="vertical">
 
-      <include layout="@layout/place_page_hotel_gallery"/>
+        <include
+          android:id="@+id/banner"
+          layout="@layout/place_page_banner"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/placepage_banner_height"
+          android:visibility="gone"
+          tools:visibility="visible"/>
 
-      <include layout="@layout/place_page_hotel_description"/>
+        <include
+          layout="@layout/divider_horizontal"/>
 
-      <include layout="@layout/place_page_hotel_facilities"/>
+        <include
+          layout="@layout/place_page_bookmark_details"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="@dimen/margin_half"
+          tools:visibility="gone"/>
 
-      <include layout="@layout/place_page_hotel_nearby"/>
+        <include layout="@layout/place_page_hotel_gallery"/>
 
-      <include layout="@layout/place_page_hotel_rating"/>
+        <include layout="@layout/place_page_hotel_description"/>
 
-      <include layout="@layout/place_page_placename"/>
+        <include layout="@layout/place_page_hotel_facilities"/>
 
-      <include layout="@layout/place_page_opening_hours"/>
+        <include layout="@layout/place_page_hotel_nearby"/>
 
-      <include layout="@layout/place_page_entrance"/>
+        <include layout="@layout/place_page_hotel_rating"/>
 
-      <include layout="@layout/place_page_phone"/>
+        <include layout="@layout/place_page_placename"/>
 
-      <include layout="@layout/place_page_website"/>
+        <include layout="@layout/place_page_opening_hours"/>
 
-      <include layout="@layout/place_page_wiki"/>
+        <include layout="@layout/place_page_entrance"/>
 
-      <include layout="@layout/place_page_email"/>
+        <include layout="@layout/place_page_phone"/>
 
-      <include layout="@layout/place_page_wifi"/>
+        <include layout="@layout/place_page_website"/>
 
-      <include layout="@layout/place_page_operator"/>
+        <include layout="@layout/place_page_wiki"/>
 
-      <include layout="@layout/place_page_cuisine"/>
+        <include layout="@layout/place_page_email"/>
 
-      <include layout="@layout/place_page_latlon"/>
+        <include layout="@layout/place_page_wifi"/>
 
-      <include layout="@layout/divider_horizontal"/>
+        <include layout="@layout/place_page_operator"/>
 
-      <include layout="@layout/place_page_taxi"/>
+        <include layout="@layout/place_page_cuisine"/>
 
-      <include layout="@layout/place_page_more"/>
+        <include layout="@layout/place_page_latlon"/>
 
-      <include layout="@layout/divider_horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="@dimen/margin_half"/>
+        <include layout="@layout/divider_horizontal"/>
+
+        <include layout="@layout/place_page_taxi"/>
+
+        <include layout="@layout/place_page_more"/>
+
+        <include layout="@layout/place_page_local_ad"/>
+
+      </LinearLayout>
+
+      <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v4.widget.Space
+          android:id="@+id/edit_top_space"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/margin_base"/>
+
+        <include layout="@layout/divider_horizontal"
+                 android:layout_width="match_parent"
+                 android:layout_height="1dp"/>
+
+        <ImageView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:src="@drawable/shadow_top"
+          android:scaleType="fitXY"/>
+      </FrameLayout>
 
       <include layout="@layout/place_page_editor"/>
 
-      <include layout="@layout/divider_horizontal"
-               android:id="@+id/editor_divider"
-               android:layout_width="match_parent"
-               android:layout_height="1dp"/>
-
       <include layout="@layout/place_page_add_business"/>
-
-      <include layout="@layout/divider_horizontal"
-               android:id="@+id/add_business_divider"
-               android:layout_width="match_parent"
-               android:layout_height="1dp"/>
 
       <include layout="@layout/place_page_add"/>
 
-      <include layout="@layout/divider_horizontal"
-               android:id="@+id/add_divider"
-               android:layout_width="match_parent"
-               android:layout_height="1dp"/>
-
-      <include layout="@layout/place_page_local_ad"/>
-
-      <include layout="@layout/divider_horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="@dimen/margin_half"/>
+      <include
+        layout="@layout/divider_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_base"/>
 
     </LinearLayout>
 
