--- a/android/res/layout-land/place_page_details.xml
+++ b/android/res/layout-land/place_page_details.xml
@@ -16,22 +16,29 @@
       android:layout_height="wrap_content"
       android:background="?windowBackgroundForced"
       android:orientation="vertical">
+
+      <include
+        android:id="@+id/banner"
+        layout="@layout/place_page_banner"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/placepage_banner_height"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+      <include
+        layout="@layout/divider_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="@dimen/margin_half"/>
+
+      <include
+        layout="@layout/divider_horizontal"/>
+
       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?ppBackground"
         android:orientation="vertical">
-
-        <include
-          android:id="@+id/banner"
-          layout="@layout/place_page_banner"
-          android:layout_width="match_parent"
-          android:layout_height="@dimen/placepage_banner_height"
-          android:visibility="gone"
-          tools:visibility="visible"/>
-
-        <include
-          layout="@layout/divider_horizontal"/>
 
         <include
           layout="@layout/place_page_bookmark_details"
@@ -74,13 +81,20 @@
 
         <include layout="@layout/divider_horizontal"/>
 
-        <include layout="@layout/place_page_taxi"/>
-
         <include layout="@layout/place_page_more"/>
 
         <include layout="@layout/place_page_local_ad"/>
 
       </LinearLayout>
+
+      <include
+        android:id="@+id/place_page_taxi_divider"
+        layout="@layout/divider_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/margin_half"/>
+
+      <include layout="@layout/place_page_taxi"/>
 
       <FrameLayout
         android:layout_width="match_parent"
