--- a/android/res/layout/place_page_local_ad.xml
+++ b/android/res/layout/place_page_local_ad.xml
@@ -2,12 +2,18 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/ll__local_ad"
-  style="@style/PlacePageItemFrame"
-  tools:showIn="@layout/place_page_details"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical"
   tools:visibility="visible">
   <TextView
     android:id="@+id/tv__local_ad"
     style="@style/PlacePageMetadataText.Button"
+    android:height="@dimen/height_block_base"
+    android:background="?clickableBackground"
     android:gravity="center"
     android:text="@string/placepage_add_place_button"/>
+
+  <include layout="@layout/divider_horizontal"/>
+
 </LinearLayout>
