--- a/android/res/layout/place_page_more.xml
+++ b/android/res/layout/place_page_more.xml
@@ -13,4 +13,7 @@
     android:background="?clickableBackground"
     android:gravity="center"
     android:text="@string/details_on_bookingcom"/>
+
+  <include layout="@layout/divider_horizontal"/>
+
 </LinearLayout>
