--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -181,9 +181,11 @@
   <dimen name="placeholder_margin_top">20dp</dimen>
   <dimen name="placeholder_margin_top_no_image">80dp</dimen>
 
-  <dimen name="margin_dialog_title">20dp</dimen>
-
   <!-- Hotel filters-->
   <dimen name="hotel_filters_tag_height">32dp</dimen>
   <dimen name="hotels_filter_padding">128dp</dimen>
+
+  <dimen name="margin_dialog_title">20dp</dimen>
+
+  <dimen name="action_bar_extended_height">72dp</dimen>
 </resources>
