--- a/android/res/values-land/dimens.xml
+++ b/android/res/values-land/dimens.xml
@@ -18,4 +18,7 @@
   <dimen name="altitude_chart_image_width">334dp</dimen>
 
   <dimen name="start_button_width">128dp</dimen>
+
+  <dimen name="permissions_title_top_margin">52dp</dimen>
+  <dimen name="permissions_items_margin">@dimen/margin_base</dimen>
 </resources>
