--- a/android/res/values-sw600dp/dimens.xml
+++ b/android/res/values-sw600dp/dimens.xml
@@ -7,4 +7,6 @@
   <dimen name="margin_direction_side">40dp</dimen>
   <dimen name="margin_direction_mid">36dp</dimen>
   <dimen name="margin_direction_around_center">80dp</dimen>
+
+  <dimen name="permissions_details_width">480dp</dimen>
 </resources>
