--- a/android/res/layout/item_permissions_title.xml
+++ b/android/res/layout/item_permissions_title.xml
@@ -7,7 +7,8 @@
   android:layout_height="wrap_content"
   android:paddingLeft="@dimen/margin_double"
   android:paddingRight="@dimen/margin_double"
-  android:paddingTop="@dimen/permissions_title_top_margin">
+  android:paddingTop="@dimen/permissions_title_top_margin"
+  android:paddingBottom="@dimen/permissions_title_bottom_margin">
   <TextView
     android:id="@+id/tv__title"
     android:layout_width="wrap_content"
