--- a/android/res/layout/fragment_welcome.xml
+++ b/android/res/layout/fragment_welcome.xml
@@ -4,60 +4,11 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-  <com.mapswithme.maps.widget.HeightLimitedFrameLayout
-    android:orientation="vertical"
+  <include
+    layout="@layout/info_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_above="@+id/btn_frame">
-    <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:layout_gravity="center">
-      <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_base"
-        android:layout_gravity="center_horizontal"
-        android:tag="@string/tag_height_limited"
-        android:src="@drawable/img_welcome"/>
-      <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_base"
-        android:layout_marginRight="@dimen/margin_base"
-        android:layout_marginBottom="@dimen/margin_base"
-        android:textAppearance="@style/MwmTextAppearance.Title"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:fontFamily="@string/robotoMedium"
-        android:text="@string/onboarding_welcome_title"
-        tools:targetApi="jelly_bean"/>
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_base"
-        android:layout_marginRight="@dimen/margin_base"
-        android:layout_marginBottom="@dimen/margin_base"
-        android:textAppearance="@style/MwmTextAppearance.Body1.Secondary"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:text="@string/onboarding_welcome_first_subtitle"/>
-      <TextView
-        android:id="@+id/tv__terms_and_privacy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_base"
-        android:layout_marginRight="@dimen/margin_base"
-        android:layout_marginBottom="@dimen/margin_base"
-        android:textAppearance="@style/MwmTextAppearance.Body3"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:linksClickable="true"
-        tools:text="@string/onboarding_welcome_second_subtitle"/>
-    </LinearLayout>
-  </com.mapswithme.maps.widget.HeightLimitedFrameLayout>
+    android:layout_above="@+id/btn_frame"/>
   <RelativeLayout
     android:id="@id/btn_frame"
     android:orientation="horizontal"
