--- a/android/res/values-sw600dp/dimens.xml
+++ b/android/res/values-sw600dp/dimens.xml
@@ -9,4 +9,5 @@
   <dimen name="margin_direction_around_center">80dp</dimen>
 
   <dimen name="permissions_details_width">480dp</dimen>
+  <dimen name="info_page_image_size">360dp</dimen>
 </resources>
