--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -195,5 +195,6 @@
   <dimen name="permissions_title_note_margin">@dimen/margin_base</dimen>
   <dimen name="permissions_items_margin">@dimen/margin_base</dimen>
   <dimen name="permissions_details_width">@dimen/match_parent</dimen>
+  <dimen name="permissions_details_icon_size">40dp</dimen>
   <dimen name="info_page_image_size">240dp</dimen>
 </resources>
