--- a/android/res/layout/layout_nav_search.xml
+++ b/android/res/layout/layout_nav_search.xml
@@ -21,6 +21,20 @@
     android:layout_height="match_parent"
     android:visibility="gone"/>
 
+  <ImageButton
+    android:id="@+id/btn_bookmarks"
+    style="@style/MwmWidget.SearchNavigationButton"
+    android:layout_width="64dp"
+    android:layout_height="64dp"
+    android:layout_marginStart="@dimen/margin_eighth"
+    android:layout_marginLeft="@dimen/margin_eighth"
+    android:layout_above="@id/anchor_center"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:background="?nav_background"
+    android:src="@drawable/ic_menu_bookmarks"
+    android:tint="@null"/>
+
   <RelativeLayout
     android:id="@+id/search_frame"
     android:layout_width="200dp"
