--- a/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/RoutePreview/MWMRoutePreview.xib
+++ b/iphone/Maps/Classes/CustomViews/NavigationDashboard/Views/RoutePreview/MWMRoutePreview.xib
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,12 +16,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="aNH-vh-DPz" customClass="MWMRoutePreview">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WqK-Yb-PmP" customClass="SolidTouchView">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpf-tw-Coz" userLabel="Back">
+                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="ELC-D6-uQM"/>
                                 <constraint firstAttribute="width" constant="44" id="e40-iL-uvR"/>
@@ -28,8 +34,10 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQc-l8-sZH" userLabel="Buttons Box">
+                            <rect key="frame" x="54" y="0.0" width="212" height="44"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cZF-Ha-2tB">
+                                    <rect key="frame" x="6" y="3" width="38" height="38"/>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="38" id="m6k-uU-yOl"/>
@@ -37,6 +45,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FuO-c6-y9C" userLabel="Bicycle">
+                                    <rect key="frame" x="60" y="3" width="38" height="38"/>
                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="38" id="9fe-fw-05J"/>
@@ -44,6 +53,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6D3-QF-6wm">
+                                    <rect key="frame" x="114" y="3" width="38" height="38"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="38" id="815-LJ-2tk"/>
@@ -51,6 +61,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="15Q-ZN-NzE" userLabel="Taxi">
+                                    <rect key="frame" x="168" y="3" width="38" height="38"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="38" id="ibp-pJ-TuK"/>
@@ -72,49 +83,14 @@
                                 <constraint firstItem="15Q-ZN-NzE" firstAttribute="centerY" secondItem="oQc-l8-sZH" secondAttribute="centerY" id="zvc-uG-Izm"/>
                             </constraints>
                         </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_arrow_up_and_down" translatesAutoresizingMaskIntoConstraints="NO" id="y8P-JL-riK">
-                            <constraints>
-                                <constraint firstAttribute="width" constant="13" id="LtD-Tz-US7"/>
-                                <constraint firstAttribute="height" constant="8" id="uez-1b-JG5"/>
-                            </constraints>
-                        </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0YR-3a-ucN">
-                            <connections>
-                                <action selector="extendTap" destination="aNH-vh-DPz" eventType="touchUpInside" id="oYh-e3-3Ln"/>
-                            </connections>
-                        </button>
-                        <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="DrK-vI-WkO">
-                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="80" id="3R7-i6-rG1"/>
-                            </constraints>
-                            <collectionViewLayout key="collectionViewLayout" id="R9u-Qo-R0Y" customClass="MWMRoutePointLayout">
-                                <connections>
-                                    <outlet property="parentView" destination="aNH-vh-DPz" id="E8J-7W-up9"/>
-                                </connections>
-                            </collectionViewLayout>
-                            <connections>
-                                <outlet property="dataSource" destination="aNH-vh-DPz" id="hJP-ak-DOp"/>
-                                <outlet property="delegate" destination="aNH-vh-DPz" id="IvN-9e-GGx"/>
-                            </connections>
-                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" red="0.12156862745098039" green="0.59999999999999998" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="140" id="2SX-TZ-tS3"/>
-                        <constraint firstItem="0YR-3a-ucN" firstAttribute="top" secondItem="WqK-Yb-PmP" secondAttribute="top" id="DyS-8t-eoF"/>
-                        <constraint firstItem="0YR-3a-ucN" firstAttribute="width" secondItem="wpf-tw-Coz" secondAttribute="width" id="IM7-F1-Enm"/>
+                        <constraint firstAttribute="height" constant="44" id="2SX-TZ-tS3"/>
                         <constraint firstItem="oQc-l8-sZH" firstAttribute="centerY" secondItem="wpf-tw-Coz" secondAttribute="centerY" id="NwC-Dq-AAM"/>
-                        <constraint firstItem="0YR-3a-ucN" firstAttribute="height" secondItem="wpf-tw-Coz" secondAttribute="height" id="Of6-Cq-FHu"/>
                         <constraint firstItem="wpf-tw-Coz" firstAttribute="leading" secondItem="WqK-Yb-PmP" secondAttribute="leading" id="bK5-4Q-Rv9"/>
                         <constraint firstItem="wpf-tw-Coz" firstAttribute="top" secondItem="WqK-Yb-PmP" secondAttribute="top" id="cPc-fO-vAa"/>
-                        <constraint firstItem="y8P-JL-riK" firstAttribute="centerY" secondItem="0YR-3a-ucN" secondAttribute="centerY" id="dYT-xy-0Dq"/>
-                        <constraint firstAttribute="trailing" secondItem="DrK-vI-WkO" secondAttribute="trailing" priority="999" constant="8" id="jom-uc-MN0"/>
-                        <constraint firstItem="DrK-vI-WkO" firstAttribute="leading" secondItem="WqK-Yb-PmP" secondAttribute="leading" priority="999" constant="8" id="kYp-Bb-6dW"/>
-                        <constraint firstItem="DrK-vI-WkO" firstAttribute="top" secondItem="wpf-tw-Coz" secondAttribute="bottom" constant="4" id="kb4-z8-KAi"/>
                         <constraint firstItem="oQc-l8-sZH" firstAttribute="centerX" secondItem="WqK-Yb-PmP" secondAttribute="centerX" id="ltA-tm-z3P"/>
-                        <constraint firstItem="y8P-JL-riK" firstAttribute="centerX" secondItem="0YR-3a-ucN" secondAttribute="centerX" id="ohd-Ye-gQA"/>
-                        <constraint firstAttribute="trailing" secondItem="0YR-3a-ucN" secondAttribute="trailing" id="qTd-74-BP9"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="backgroundColorName" value="primary"/>
@@ -130,15 +106,10 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="arrowImageView" destination="y8P-JL-riK" id="rzP-ce-6f0"/>
                 <outlet property="backButton" destination="wpf-tw-Coz" id="9nj-K5-pOR"/>
                 <outlet property="bicycle" destination="FuO-c6-y9C" id="UR2-pF-Amb"/>
-                <outlet property="collectionView" destination="DrK-vI-WkO" id="IRr-R5-WIS"/>
                 <outlet property="contentView" destination="WqK-Yb-PmP" id="4ph-Dm-EFr"/>
-                <outlet property="extendButton" destination="0YR-3a-ucN" id="fJG-ts-aGf"/>
-                <outlet property="layout" destination="R9u-Qo-R0Y" id="cqs-S1-d4J"/>
                 <outlet property="pedestrian" destination="6D3-QF-6wm" id="bdh-zx-9LW"/>
-                <outlet property="planningRouteViewHeight" destination="2SX-TZ-tS3" id="IwX-TA-FxL"/>
                 <outlet property="taxi" destination="15Q-ZN-NzE" id="RaD-7N-ZE2"/>
                 <outlet property="vehicle" destination="cZF-Ha-2tB" id="QP3-tU-nfO"/>
             </connections>
@@ -146,7 +117,6 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_arrow_up_and_down" width="13" height="8"/>
         <image name="ic_nav_bar_back" width="14" height="22"/>
     </resources>
 </document>
