--- a/android/res/layout/routing_action_panel.xml
+++ b/android/res/layout/routing_action_panel.xml
@@ -17,6 +17,8 @@
     android:textAppearance="@style/MwmTextAppearance.Body3"
     android:layout_marginLeft="@dimen/margin_base"
     android:layout_marginRight="@dimen/margin_base"
+    android:layout_marginTop="@dimen/routing_action_panel_margin_vert"
+    android:layout_marginBottom="@dimen/routing_action_panel_margin_vert"
     tools:text="Add start point to plan a route."/>
   <LinearLayout
     android:id="@id/btn__my_position_use"
