--- a/android/res/layout/layout_nav_search.xml
+++ b/android/res/layout/layout_nav_search.xml
@@ -24,11 +24,11 @@
   <ImageButton
     android:id="@+id/btn_bookmarks"
     style="@style/MwmWidget.SearchNavigationButton"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
+    android:layout_width="@dimen/margin_quadruple"
+    android:layout_height="@dimen/margin_quadruple"
+    android:layout_marginTop="@dimen/nav_zoom_top"
     android:layout_marginStart="@dimen/margin_eighth"
     android:layout_marginLeft="@dimen/margin_eighth"
-    android:layout_above="@id/anchor_center"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:background="?nav_background"
@@ -42,7 +42,7 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_marginTop="-68dp"
-    android:layout_below="@id/anchor_center"
+    android:layout_below="@id/btn_bookmarks"
     android:layout_marginLeft="-70dp"
     android:layout_marginStart="-70dp"
     android:background="?searchLayoutBackground"
@@ -101,11 +101,11 @@
   <ImageButton
     android:id="@+id/btn_search"
     style="@style/MwmWidget.SearchNavigationButton"
-    android:layout_width="64dp"
-    android:layout_height="64dp"
+    android:layout_width="@dimen/margin_quadruple"
+    android:layout_height="@dimen/margin_quadruple"
     android:layout_marginStart="@dimen/margin_eighth"
     android:layout_marginLeft="@dimen/margin_eighth"
-    android:layout_below="@id/anchor_center"
+    android:layout_below="@id/btn_bookmarks"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:background="?nav_background"
