--- a/android/res/layout/place_page_ugc.xml
+++ b/android/res/layout/place_page_ugc.xml
@@ -2,13 +2,14 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/ll__place_hotel_rating"
+  android:id="@+id/ll__pp_ugc"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   android:visibility="gone"
   tools:visibility="visible">
   <LinearLayout
+    android:id="@+id/ll__pp_ugc_rating"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="158dp"
@@ -21,6 +22,7 @@
       android:layout_marginTop="@dimen/margin_base"
       android:textAppearance="@style/MwmTextAppearance.Body3"
       android:textStyle="bold"
+      android:text="Tap to rate &amp; review this place"
       tools:text="Tap to rate &amp; review this place"/>
     <LinearLayout
       android:layout_width="wrap_content"
@@ -137,7 +139,7 @@
     </LinearLayout>
   </LinearLayout>
   <android.support.v7.widget.RecyclerView
-    android:id="@+id/rv__place_ugc_review"
+    android:id="@+id/rv__pp_ugc_reviews"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:listitem="@layout/item_ugc_comment"/>
@@ -148,7 +150,7 @@
     android:layout_marginRight="@dimen/margin_base"
     android:background="?dividerHorizontal"/>
   <TextView
-    android:id="@+id/tv__place_ugc_reviews_more"
+    android:id="@+id/tv__pp_ugc_reviews_more"
     style="@style/PlacePageMetadataText.Button"
     android:height="@dimen/height_block_base"
     android:background="?clickableBackground"
