--- a/android/res/layout/place_page_viator.xml
+++ b/android/res/layout/place_page_viator.xml
@@ -23,7 +23,7 @@
       android:layout_centerVertical="true"
       android:textAppearance="@style/MwmTextAppearance.Body3"
       android:fontFamily="@string/robotoMedium"
-      android:text="Attractions and tours"
+      android:text="@string/viator_title"
       tools:targetApi="jelly_bean"/>
     <TextView
       android:id="@+id/btn__viator_more"
