--- a/android/res/layout/menu_route_plan_line.xml
+++ b/android/res/layout/menu_route_plan_line.xml
@@ -9,7 +9,7 @@
   <include layout="@layout/altitude_chart_panel"
            tools:visibility="gone"/>
 
-  <include layout="@layout/uber_panel"/>
+  <include layout="@layout/taxi_panel"/>
 
   <include layout="@layout/start_button"/>
 
